--- a/languages/mt-ticket-bus-bg_BG.po
+++ b/languages/mt-ticket-bus-bg_BG.po
@@ -1,6 +1,5 @@
 # Copyright (C) 2024 MT Ticket Bus
 # This file is distributed under the same license as the MT Ticket Bus plugin.
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: MT Ticket Bus 1.0.0\n"
@@ -9,13 +8,13 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"\n"
-"Language: \n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
-"X-Generator: Loco https://localise.biz/"
+"PO-Revision-Date: 2026-01-23 06:37+0000\n"
+"Last-Translator: \n"
+"Language-Team: Български\n"
+"Language: bg_BG\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Loco https://localise.biz/\n"
+"X-Loco-Version: 2.8.1; wp-6.9; php-8.4.12"
 
 #. %d: number of tickets
 #: includes/class-woocommerce-integration.php:357
